--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -95,3 +95,8 @@
 .ProseMirror img {
   @apply max-w-full h-auto rounded-lg;
 }
+
+/* Code Editor Height Fix */
+#code-editor {
+  height: calc(100% - 4rem);
+}
